snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha1
a548aeeee5f78bfeac7c46c7dab9824e5a27c60f